<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ListView android:id="@+id/in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:layout_weight="1"
    />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    	<TextView 
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/network"/>
    	<EditText 
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:maxLength="4"
    		android:hint="0000~FFFE"
    		android:id="@+id/wangduan"/>
    	<TextView 
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/shortaddress"/>
    	<EditText 
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:maxLength="4"
    		android:hint="0000~FFFE"
    		android:id="@+id/duandizhi"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button android:id="@+id/button_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config"
        />
        <Button android:id="@+id/button_config03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config1"
        />
        <Button android:id="@+id/button_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
        />
        <Button android:id="@+id/button_xinzeng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
        />
        <EditText android:id="@+id/edit_text_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
        />
        <Button android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
        />
    </LinearLayout>
</LinearLayout>
